--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
 layout: default
 ---
 
-{% for post in site.posts %}
-  <img src="{{ post.cover-image }}" />
-  <a href="{{ post.url }}">{{ post.title }}</a>
+{% for number in site.project-order %}
+
+  {% for post in site.posts %}
+    {% if post.order-id == {{number}} %}
+      <div class="h5 sans-serif fw-700"> {% if forloop.index < 10 %}0{% endif %}{{ forloop.index }}</div>
+      <a href="{{ post.url }}" class="relative block">
+          <img src="{{ post.cover-image }}" class="w-100 dim bg-white block" />
+          <div class="overlay">
+              <h1 class="h1 fw-700 sans-serif black tc">+ See More</h1>
+          </div>
+      </a>
+      <a href="{{ post.url }}" class="link dim h4 white fw-700 sans-serif">{{ post.title }}</a>
+      <div> {{ post.tags }}</div>
+
+    {% endif %}
+  {% endfor %}
+
 {% endfor %}
